```mermaid
erDiagram
  CANTEENS ||--o{ MENU_ITEMS : offers
  CANTEENS ||--o{ ORDERS : receives
  USERS ||--o{ ORDERS : places
  ORDERS ||--o{ ORDER_ITEMS : contains
  MENU_ITEMS ||--o{ ORDER_ITEMS : referenced_in

  USERS {
    int id PK
    string full_name
    string username UK
    string email UK
    string password_hash
    string role "student | staff | admin"
    timestamp created_at
  }

  CANTEENS {
    int id PK
    string name
    string location
    boolean is_active
    timestamp created_at
  }

  MENU_ITEMS {
    int id PK
    int canteen_id FK
    string name
    string description
    decimal price
    string category "snacks | meals | drinks"
    boolean is_available
    timestamp created_at
  }

  ORDERS {
    int id PK
    int user_id FK
    int canteen_id FK
    int token_number
    string status "placed | preparing | ready"
    decimal subtotal
    decimal handling_fee
    decimal total_amount
    timestamp created_at
  }

  ORDER_ITEMS {
    int id PK
    int order_id FK
    int menu_item_id FK
    string item_name_snapshot
    decimal price_snapshot
    int quantity
    decimal subtotal
  }
```

